collapsed menu icon no longer affected by min width

--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ nav {
   nav .navbar-brand div ~ div {
     font-size: 0.75em;
     margin-top: -5px; }
-  nav .nav-link {
+  nav .navbar-nav:first-child .nav-link {
     min-width: 50px; }
 
 .terminal-card {
